# corallium

./: .calcipy.json  .copier-answers.yml  .flake8  .pre-commit-config.yaml  .ruff.toml  .tool-versions  404.html  CLAUDE.md  CNAME  COMPREHENSIVE_REVIEW.md  README.md  gen_ref_nav.py  index.html  mise.toml  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  run  sitemap.xml  tail-jsonl-todo-review.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_pipeline.yml
corallium/: __init__.py  _runtime_type_check_setup.py  can_skip.py  file_helpers.py  file_search.py  log.py  markdown_table.py  markup_table.py  pretty_process.py  shell.py  sync_dependencies.py  tomllib.py  tomllib.pyi
corallium/code_tag_collector/: __init__.py  _collector.py
corallium/loggers/: plain_printer.py  rich_printer.py  styles.py  writer.py
corallium/vcs/: __init__.py  _repo.py
docs/: README.md  gen_ref_nav.py
docs/Advanced_Documentation/: index.html
docs/CHANGELOG/: index.html
docs/CODE_TAG_SUMMARY/: index.html
docs/DEVELOPER_GUIDE/: index.html
docs/STYLE_GUIDE/: index.html
docs/docs/: CHANGELOG.md  CODE_TAG_SUMMARY.md  DEVELOPER_GUIDE.md
reference/SUMMARY/: index.html
reference/corallium/: index.html
scripts/: check_imports.py
search/: search_index.json
tests/: can_skip.py  configuration.py  test_can_skip.py  test_code_tag_collector.py  test_file_helpers.py  test_file_search.py  test_log.py  test_markdown_table.py  test_markup_table.py  test_pretty_process.py  test_shell.py  test_sync_dependencies.py  test_zz_corallium.py
(+28 files in other folders)
